added riptide end2end

--- a/figures/Makefile
+++ b/figures/Makefile
@@ -1,4 +1,6 @@
-PDFS := overview.pdf device.pdf power.pdf future_model.pdf future_model_legend.pdf
+PDFS := overview.pdf device.pdf power.pdf \
+	future_model.pdf future_model_legend.pdf \
+	progress_energy-graph.pdf progress_perf-graph.pdf
 
 PDFDIR := pdf
 PNGDIR := png
@@ -44,5 +46,10 @@ $(PDFDIR)/power.pdf: pdf/doc_data.txt
 	cp $(PDFDIR)/figures_03.pdf $(PDFDIR)/power.pdf
 
 $(PDFDIR)/future_model.pdf $(PDFDIR)/future_model_legend.pdf: model.py camera.json
+	mkdir -p $(PDFDIR)
 	python3 model.py  --cfg=camera.json --dest=$(PDFDIR)/future_model.pdf \
 		--legend=$(PDFDIR)/future_model_legend.pdf
+
+$(PDFDIR)/%-graph.pdf: $(DATA) bar.py %.json
+	mkdir -p $(PDFDIR)
+	python3 bar.py --cfg=$*.json --dest=$(PDFDIR)/$*-graph.pdf 
